#[doc = r#""]
[[bin]]
path = "src/main.uwu"
name = "cargo-cuddle"

[dependencies]
anyhow = "1.0.62"
extension-traits = "1.0.1"
uwuify = "0.2.2"

[package]
name = "cargo-cuddle"
version = "0.2.0-w-0"
edition = "2021"
rust-version = "1.60.0"

license-file = "Cargo.toml"
description = "OwO"

[package.metadata.build]
script = """#]
fn main() -> Result<(), Box<dyn ::std::error::Error>> {
    ::std::fs::copy("src/uwu.rs", "src/main.uwu")?;
    ::std::io::copy(
        &mut ::std::fs::File::open("src/main.rs")?,
        &mut
            ::std::fs::File::options()
                .append(true)
                .open("src/main.uwu")?
        ,
    )?;
    Ok(())
}
// """
